--- a/MyMusicStashWeb/MyMusicStashWeb/Email/emailtemplate.html
+++ b/MyMusicStashWeb/MyMusicStashWeb/Email/emailtemplate.html
@@ -213,7 +213,7 @@
             <!-- Hero Image, Flush : BEGIN -->
             <tr>
 				<td bgcolor="#ffffff">
-                        <img src="http://i.imgur.com/AL71kmw.png" aria-hidden="true" width="600" height="" alt="alt_text" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;" class="g-img">
+                        <img src="http://i.imgur.com/stKZHNU.jpg" aria-hidden="true" width="600" height="" alt="alt_text" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;" class="g-img">
 				</td>
             </tr>
             <!-- Hero Image, Flush : END -->
@@ -221,7 +221,7 @@
             <!-- 1 Column Text + Button : BEGIN -->
             <tr>
                 <td bgcolor="#ffffff" style="padding: 40px 40px 20px; text-align: center;">
-                    <h1 style="margin: 0; font-family: sans-serif; font-size: 24px; line-height: 27px; color: #333333; font-weight: normal;">Welkom bij EventManager</h1>
+                    <h1 style="margin: 0; font-family: sans-serif; font-size: 24px; line-height: 27px; color: #333333; font-weight: normal;">Welkom bij MyMusicStash</h1>
                 </td>
             </tr>
             <tr>
